# lomiri-gallery-app

debian/: changelog  rules
desktop/: CMakeLists.txt
